k8s/apps/mern/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-backend
  namespace: mern
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mern-backend
  template:
    metadata:
      labels:
        app: mern-backend
    spec:
      containers:
      - name: backend
        image: kastriot2022/mern-backend:latest
        ports:
        - containerPort: 5000
