k8s/apps/mern/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-backend-service
  namespace: mern
spec:
  selector:
    app: mern-backend
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
