k8s/apps/mern/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-frontend-service
  namespace: mern
  labels:
    app: mern-frontend
spec:
  selector:
    app: mern-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
