k8s/apps/mern/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-ingress
  namespace: mern
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - mern.kastro.com
    secretName: letsencrypt-prod
  rules:
  - host: mern.kastro.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mern-frontend-service
            port:
              number: 80
      - path: /api   # if I also want external clients to be able to hit your backend (e.g. mobile apps, external API consumers).
        pathType: Prefix
        backend:
          service:
            name: mern-backend-service
            port:
              number: 5000
